--- a/RailwayTicket/app/src/main/res/layout/content_main.xml
+++ b/RailwayTicket/app/src/main/res/layout/content_main.xml
@@ -9,5 +9,13 @@
     tools:context="com.example.mohnish.railwayticket.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-
+    <ImageView
+            android:id="@+id/imageView3"
+           android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="133dp"
+            app:srcCompat="@drawable/ic_qr_code_scan"
+            tools:ignore="VectorDrawableCompat" />
 </RelativeLayout>
