--- a/RailwayTicket/app/src/main/res/layout/fragment_bookinghistory.xml
+++ b/RailwayTicket/app/src/main/res/layout/fragment_bookinghistory.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:layout_height="match_parent">
+
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/recylerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 </RelativeLayout>
