--- a/RailwayTicket/app/src/main/res/layout/fragment_bookinghistory.xml
+++ b/RailwayTicket/app/src/main/res/layout/fragment_bookinghistory.xml
@@ -7,10 +7,15 @@
     android:paddingBottom="16dp"
     android:layout_height="match_parent">
 
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/recylerView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recylerView"
+        android:scrollbars="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
