--- a/RailwayTicket/app/src/main/res/layout/fragment_bookinghistory.xml
+++ b/RailwayTicket/app/src/main/res/layout/fragment_bookinghistory.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#E8E8E8"
+    android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:layout_height="match_parent">
-
+    android:paddingTop="16dp">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recylerView"
-        android:scrollbars="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:scrollbars="horizontal" />
 
 
 </RelativeLayout>
