--- a/RailwayTicket/app/src/main/res/layout/ticket_row.xml
+++ b/RailwayTicket/app/src/main/res/layout/ticket_row.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cardview"
-    android:layout_width="100dp"
-    android:layout_height="wrap_content"
-    card_view:contentPadding="7dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="30dp"
+    card_view:cardBackgroundColor="@color/common_google_signin_btn_text_dark_default"
     card_view:cardCornerRadius="7dp"
-    card_view:cardElevation="7dp"
-    card_view:cardBackgroundColor="#c5cac6"
-    android:layout_margin="1dp"
-    >
+    card_view:cardElevation="10dp"
+    card_view:contentPadding="5dp">
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        card_view:srcCompat="@drawable/tempqr" />
 
     <TextView
         android:id="@+id/textview1"
-        android:layout_gravity="center"
-        android:textSize="20dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="#fff"/>
+        android:layout_gravity="center"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="3dp"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
 </android.support.v7.widget.CardView>
