--- a/RailwayTicket/app/src/main/res/layout/ticket_row.xml
+++ b/RailwayTicket/app/src/main/res/layout/ticket_row.xml
@@ -1,30 +1,253 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="30dp"
+    android:layout_marginBottom="60dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
+    android:layout_marginTop="60dp"
     card_view:cardBackgroundColor="@color/common_google_signin_btn_text_dark_default"
     card_view:cardCornerRadius="7dp"
     card_view:cardElevation="10dp"
     card_view:contentPadding="5dp">
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center_horizontal"
-        card_view:srcCompat="@drawable/tempqr" />
 
-    <TextView
-        android:id="@+id/textview1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="3dp"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+  <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+      <TableLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+          <TableRow
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="2dp">
+
+              <ImageView
+                  android:id="@+id/imageView4"
+                  android:layout_width="75dp"
+                  android:layout_height="wrap_content"
+                  card_view:srcCompat="@drawable/ic_roundtrip"
+
+                  tools:ignore="VectorDrawableCompat" />
+
+              <TextView
+                  android:id="@+id/textView"
+                  android:layout_width="139dp"
+                  android:layout_height="wrap_content"
+                  android:text="DATE "
+                  android:textAllCaps="true"
+                  android:textColor="#000000"
+                  android:textStyle="bold" />
+
+              <TextView
+                  android:id="@+id/textView2"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="1"
+                  android:paddingRight="8dp"
+                  android:text="src-dest"
+                  android:textAlignment="textEnd"
+                  android:textAllCaps="true"
+                  android:textColor="#000000"
+                  android:textStyle="bold" />
+
+
+          </TableRow>
+
+          <TableRow
+              android:layout_width="325dp"
+              android:layout_height="match_parent"
+              android:paddingTop="8dp">
+
+              <TextView
+                  android:id="@+id/textView3"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_horizontal"
+                  android:text="Source"
+                  android:textAllCaps="true"
+                  android:textStyle="bold" />
+
+              <TextView
+                  android:id="@+id/textView4"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_column="2"
+                  android:gravity="center_horizontal"
+                  android:text="Destination"
+                  android:textAllCaps="true"
+                  android:textStyle="bold" />
+          </TableRow>
+
+          <TableRow
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:paddingBottom="8dp"
+              android:paddingTop="4dp">
+
+              <TextView
+                  android:id="@+id/textView6"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_horizontal"
+                  android:text="TextView"
+
+                  android:textAllCaps="true"
+                  android:textColor="#000000"
+                  android:textSize="20sp"
+                  android:textStyle="bold"
+                  tools:text="SRC" />
+
+              <ImageView
+                  android:id="@+id/imageView5"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  card_view:srcCompat="@drawable/ic_right_arrow" />
+
+              <TextView
+                  android:id="@+id/textView7"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="1"
+                  android:gravity="center_horizontal"
+                  android:paddingRight="8dp"
+                  android:text="TextView"
+
+                  android:textAllCaps="true"
+                  android:textColor="#000000"
+                  android:textSize="20sp"
+                  android:textStyle="bold"
+                  tools:text="DES" />
+          </TableRow>
+
+          <TableRow
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:paddingTop="5dp">
+
+              <TextView
+                  android:id="@+id/textView8"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_horizontal"
+                  android:text="Ticket Type"
+                  android:textAllCaps="true"
+                  android:textSize="11sp"
+                  android:textStyle="bold" />
+
+              <TextView
+                  android:id="@+id/textView9"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_column="2"
+                  android:gravity="center_horizontal"
+                  android:text="Route"
+                  android:textAllCaps="true"
+                  android:textSize="11sp"
+                  android:textStyle="bold" />
+          </TableRow>
+
+          <TableRow
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:paddingBottom="8dp"
+              android:paddingTop="4dp">
+
+              <TextView
+                  android:id="@+id/textView10"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_horizontal"
+                  android:text="Type"
+                  android:textSize="12sp"
+                  android:textStyle="bold" />
+
+              <TextView
+                  android:id="@+id/textView11"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_column="2"
+                  android:gravity="center_horizontal"
+                  android:text="routes"
+                  android:textSize="12sp"
+                  android:textStyle="bold" />
+          </TableRow>
+
+          <TableRow
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:paddingTop="5dp">
+
+              <TextView
+                  android:id="@+id/textView12"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_horizontal"
+                  android:text="Passengers"
+                  android:textSize="12sp"
+                  android:textStyle="bold" />
+
+              <TextView
+                  android:id="@+id/textView13"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_column="2"
+                  android:gravity="center_horizontal"
+                  android:text="Valid Till"
+                  android:textSize="12sp"
+                  android:textStyle="bold" />
+          </TableRow>
+
+          <TableRow
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:paddingBottom="4dp"
+              android:paddingTop="8dp">
+
+              <TextView
+                  android:id="@+id/textView14"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_horizontal"
+                  android:text="Num"
+                  android:textSize="12sp"
+                  android:textStyle="bold" />
+
+              <TextView
+                  android:id="@+id/textView15"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_column="2"
+                  android:gravity="center_horizontal"
+                  android:text="date/time"
+                  android:textSize="12sp"
+                  android:textStyle="bold" />
+          </TableRow>
+
+
+      </TableLayout>
+
+
+
+      <ImageView
+          android:id="@+id/imageView2"
+          android:layout_width="100dp"
+          android:layout_height="100dp"
+          android:layout_gravity="center_horizontal"
+          android:layout_marginBottom="20dp"
+          android:layout_marginTop="50dp" />
+  </LinearLayout>
+
+
+
+
+
 
 </android.support.v7.widget.CardView>
