--- a/RailwayTicket/app/src/main/res/layout/fragment_bookinghistory.xml
+++ b/RailwayTicket/app/src/main/res/layout/fragment_bookinghistory.xml
@@ -15,7 +15,8 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:scrollbars="horizontal" />
+
+        android:scrollbars="none" />
 
 
 </RelativeLayout>
