--- a/RailwayTicket/app/src/main/res/layout/ticket_row.xml
+++ b/RailwayTicket/app/src/main/res/layout/ticket_row.xml
@@ -12,12 +12,11 @@
     card_view:cardBackgroundColor="@color/common_google_signin_btn_text_dark_default"
     card_view:cardCornerRadius="10dp"
     card_view:cardElevation="10dp"
-    card_view:contentPadding="5dp">
+    card_view:contentPadding="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="2dp">
+        android:layout_height="match_parent">
 
 
         <ImageView
@@ -33,7 +32,7 @@
 
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/dateCreation"
             android:layout_width="139dp"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/ticketIconImageView"
@@ -47,11 +46,11 @@
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/srcDest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView"
-            android:layout_alignBottom="@+id/textView"
+            android:layout_alignBaseline="@+id/dateCreation"
+            android:layout_alignBottom="@+id/dateCreation"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="11dp"
             android:layout_weight="1"
@@ -63,13 +62,13 @@
 
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/source"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView6"
-            android:layout_below="@+id/textView"
+            android:layout_alignEnd="@+id/src"
+            android:layout_below="@+id/dateCreation"
             android:layout_marginTop="30dp"
-            android:gravity="center_horizontal"
+
             android:text="Source"
             android:textAllCaps="true"
             android:textColor="#808080"
@@ -77,14 +76,12 @@
 
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/destination"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_alignBaseline="@+id/textView3"
-            android:layout_alignBottom="@+id/textView3"
+            android:layout_alignBaseline="@+id/source"
+            android:layout_alignBottom="@+id/source"
             android:layout_alignParentEnd="true"
-            android:gravity="center_horizontal"
             android:text="Destination"
             android:textAllCaps="true"
             android:textColor="#808080"
@@ -92,13 +89,13 @@
 
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/src"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/ticketIconImageView"
-            android:layout_below="@+id/textView3"
+            android:layout_below="@+id/source"
             android:layout_marginTop="17dp"
-            android:gravity="center_horizontal"
+
             android:text="SRC"
             android:textAllCaps="true"
             android:textColor="#000000"
@@ -110,18 +107,17 @@
             android:id="@+id/rightArrowImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView6"
+            android:layout_alignBottom="@+id/src"
             android:layout_centerHorizontal="true" />
 
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/des"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/rightArrowImageView"
-            android:layout_alignStart="@+id/textView2"
+            android:layout_alignStart="@+id/srcDest"
             android:layout_marginStart="14dp"
-            android:gravity="center_horizontal"
 
             android:text="DES"
             android:textAllCaps="true"
@@ -135,10 +131,9 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView3"
+            android:layout_alignStart="@+id/source"
             android:layout_below="@+id/rightArrowImageView"
             android:layout_marginTop="23dp"
-            android:gravity="center_horizontal"
             android:text="Ticket Type"
             android:textAllCaps="true"
             android:textColor="#808080"
@@ -151,9 +146,9 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView8"
             android:layout_alignBottom="@+id/textView8"
-            android:layout_alignEnd="@+id/textView2"
+            android:layout_alignEnd="@+id/srcDest"
             android:layout_marginEnd="11dp"
-            android:gravity="center_horizontal"
+
             android:text="Route"
             android:textAllCaps="true"
             android:textColor="#808080"
@@ -161,13 +156,13 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView6"
+            android:layout_alignStart="@+id/src"
             android:layout_below="@+id/textView8"
             android:layout_marginTop="15dp"
-            android:gravity="center_horizontal"
+
             android:text="Type"
             android:textColor="#808080"
             android:textSize="12sp"
@@ -175,13 +170,12 @@
 
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/route"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView10"
-            android:layout_alignBottom="@+id/textView10"
+            android:layout_alignBaseline="@+id/type"
+            android:layout_alignBottom="@+id/type"
             android:layout_alignStart="@+id/textView9"
-            android:gravity="center_horizontal"
             android:text="routes"
             android:textColor="#808080"
             android:textSize="12sp"
@@ -193,10 +187,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/textView8"
-            android:layout_below="@+id/textView10"
+            android:layout_below="@+id/type"
             android:layout_marginTop="27dp"
-            android:gravity="center_horizontal"
+
             android:text="Passengers"
+            android:textAllCaps="true"
             android:textColor="#808080"
             android:textSize="12sp"
             android:textStyle="bold" />
@@ -207,36 +202,39 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView12"
             android:layout_alignBottom="@+id/textView12"
-            android:layout_alignEnd="@+id/textView11"
-            android:gravity="center_horizontal"
-            android:text="Valid Till"
+            android:layout_alignEnd="@+id/route"
+
+            android:text="Validity"
+            android:textAllCaps="true"
             android:textColor="#808080"
             android:textSize="12sp"
             android:textStyle="bold" />
 
 
         <TextView
-            android:id="@+id/textView14"
-            android:layout_width="wrap_content"
+            android:id="@+id/passengerNumber"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView10"
+            android:layout_alignEnd="@+id/type"
+            android:layout_alignStart="@+id/type"
             android:layout_below="@+id/textView12"
-            android:layout_marginTop="12dp"
-            android:gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+
             android:text="Num"
             android:textColor="#808080"
             android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
+            android:id="@+id/validity"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView14"
-            android:layout_alignBottom="@+id/textView14"
-            android:layout_alignStart="@+id/textView13"
-            android:layout_column="2"
-            android:gravity="center_horizontal"
+            android:layout_alignBaseline="@+id/passengerNumber"
+            android:layout_alignBottom="@+id/passengerNumber"
+            android:layout_marginStart="11dp"
+            android:layout_toEndOf="@+id/rightArrowImageView"
+            android:gravity="end"
+            android:singleLine="true"
             android:text="date/time"
             android:textColor="#808080"
             android:textSize="12sp"
@@ -247,10 +245,10 @@
             android:id="@+id/qrImageView"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:scaleType="fitXY"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:scaleType="fitXY" />
 
 
     </RelativeLayout>
